// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge tone: action renders correctly 1`] = `
<div>
  <span
    class="css-gjbw0a-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;

exports[`NotificationBadge tone: neutral renders correctly 1`] = `
<div>
  <span
    class="css-1iy14u4-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;
